--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,79 +1,89 @@
-/*global styling*/
-* {
-    margin: 0;
-    padding: 0;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 25px;
-}
-/*body background*/
 body {
-    background-color: rgb(90, 90, 90);
+  font-family: "Kanit", sans-serif;
+  background-color: #eef4ed;
 }
-/*text stylings*/
-p {
-    color: white;
-    font-size: 1.1em;
-
-}
-
-h1 {
-    font-size: 1.8em;
-    color: white;
-    font-weight: bold;
+.wrapper {
+  margin: 100px auto 0 auto;
+  max-width: 600px;
 }
 
-h2{
-    font-size: 1.2em;
-    color: white;
-    font-weight: bold;
-    font-style: oblique;
-}
-/*button stylings*/
-button {
-    outline: none;
-    background-color:rgb(136, 134, 134);
-    color: white;
-    cursor: pointer;
-    font-weight: bold;
-    padding: 2px;
-}
-
-/*top-bar div positioning*/
-.top-bar {
-    margin: 1px;
-}
-/*timer*/
-.top-bar p{
-    float: right;
-    border: 2px;
-    border-style: solid;
-    border-color: black;
-    background-color: rgb(136, 134, 134);
-    padding: 2px;
-}
-/*highscores button*/
-.top-bar button{
-    float: left;
-}
-/*hide class*/
 .hide {
-    display: none;
-}
-/*stlying of inner-container div*/
-.inner-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: stretch;
-    background-color: rgb(102, 102, 102);
-    padding: 1px;
-    margin: 100px 300px auto 300px; 
-    text-align: center;
-    border-radius: 5px;
+  display: none;
 }
 
-#start-button{
-    margin-top: 5px;
+.start {
+  text-align: center;
 }
 
+.scores {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+}
 
+.feedback {
+  font-size: 80%;
+  font-family: "Kanit", sans-serif;
+  margin-top: 20px;
+  margin-left: 20px;
+  padding-top: 10px;
+  color: gray;
+  border-top: 2px solid rgb(201, 193, 193);
+}
+
+.timer {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+a {
+  color: #13315c;
+  text-decoration: none;
+  transition: color 0.1s;
+}
+
+a:hover {
+  color: #134074;
+}
+
+button {
+  display: inline-block;
+  margin: 5px;
+  cursor: pointer;
+  font-family: "Kanit", sans-serif;
+  font-size: 100%;
+  background-color: #134074;
+  border-radius: 5px;
+  padding: 2px 10px;
+  color: white;
+  border: 0;
+  transition: background-color 0.1s;
+}
+
+button:hover {
+  background-color: #0b2545;
+}
+
+.choices button {
+  display: block;
+}
+
+input[type="text"] {
+  font-size: 100%;
+}
+
+ol {
+  padding-left: 0px;
+  max-height: 400px;
+  overflow: auto;
+}
+
+li {
+  padding: 5px;
+  list-style: decimal inside none;
+}
+
+li:nth-child(odd) {
+  background-color: #8da9c4;
+}
